# COREACTA-DOE

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  manage.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  render.yaml
app/: globals.css  layout.tsx  page.tsx
coreacta/: asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
doe/: admin.py  apps.py  models.py  pdf.py  serializers.py  services.py  test_bootstrap_admin.py  tests.py  urls.py  views.py
doe/management/commands/: bootstrap_admin.py
doe/migrations/: 0001_initial.py  0002_factor_range_and_result_response_constraints.py  0003_project_owner.py  0004_project_goal_project_response_name_project_slogan.py  0005_factor_categorical.py  0006_project_goal_default.py  0007_project_design_options.py  0008_resulthistory.py
