[tool.poetry]
name = "coreacta"
version = "0.1.0"
description = "Coreacta DOE backend MVP"
authors = ["Coreacta"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
